@@ -1,3 +1,8 @@
+Sat Feb  8 17:16:09 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* pr-output.cc (octave_print_internal): Print a new line for empty
+	string matrices.
+
 Wed Feb  5 14:30:44 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* oct-stream.cc (scanf_format_list::process_conversion): Accept
